public/stylesheets/style.css
html, body, header, .head, main, h1{
    margin:0;
    padding:0;
}
html{
    font-family: Arial, Helvetica, sans-serif;
}

body{
    color: rgb(235, 235, 235);
    background-color: rgb(36, 36, 36);
}

header{
    background-color: rgb(36, 36, 36);
    color:rgb(235, 235, 235);
    
} 

.head{
    padding: 30px;
    
    text-align: center;
}

.links{
    max-width: 900px;
    margin: auto;
    Display: flex;   
    Flex-direction: row;
    
}

.button{
    padding: 20px;
    
}

main{
    margin:0;
    padding:0;
    background-color: rgb(241, 241, 241);
}

.about{
    color:rgb(34, 34, 34);
    padding-left: 10%;
    padding-right: 10%;

    max-width: 800px; 
    margin: auto;
    
}

.aboutme{
    text-align: center;
    padding-top: 10px;
}

.button{
    text-decoration: none;
    color: rgb(255, 255, 255);
    transition: 0.3s; 
}

.button:hover{
    background-color: grey;
    transform: translateY(-5px);
    color: white;
    
}

.button1{
    text-decoration: none;
    background-color: rgb(202, 202, 202);
    color: rgb(0, 0, 0);
    transition: 0.3s; 
    padding: 10px;
    
}

.button1:hover{
    background-color: grey;
    transform: translateY(-5px);
    color: white;
}

img{
    margin-left: auto;
    margin-right: auto;
    display: block;
    max-width: 500px;
}

#poster{
    margin-left: auto;
    margin-right: auto;
    display: block;
    max-width: 1500px;
    width: 70%;
    padding-top: 20px;
    padding-bottom: 20px;
    
}

.description{
    padding-bottom: 10px;
    font-size: large;
}

#education{
    text-decoration: underline;
    text-align: center;
    padding-bottom: 10px;
}


figcaption{
    padding-top: 10px;
    text-align: center;
    padding-bottom: 10px;
}

@media screen and (max-width: 700px) {
    .head{
        padding-bottom: 0;
    }
    img{
        margin-left: auto;
        margin-right: auto;
        display: block;
        width: 90%;
        max-width: 500px;
    }
    .links{   
        text-align: center;
        flex-direction: column;
        font-size: large;
    }    
    .footer{
        font-size: medium;
    }
    .about{
        font-size: large;
    }
    #poster{
        margin-left: auto;
        margin-right: auto;
        display: block;
        max-width: 1500px;
        width: 90%;
        padding-top: 20px;
        padding-bottom: 20px;
        
    }
}

footer{
    margin:auto;
    max-width: 600px;
    border-top:1px solid rgb(217, 217, 217);
    padding-top: 10px;
    padding-bottom: 20px;
    text-align: center;
}

.foot{
    text-decoration: none;
    color: rgb(255, 255, 255);
    transition: 0.3s; 
    padding: 5px;
}

.Proj{
    display:inline-block;
    text-decoration: none;
    color: black;
    padding: 20px;
    transition: 0.3s; 
    
}

.Proj:hover{
    transform: translateY(-5px);
}
.foot:hover{
    background-color: grey;
    transform: translateY(-5px);
    color: white;
}

.assignments{
    color: black;
    
    text-align: center;
    padding-top: 10px;
    padding-bottom: 20px;

}

.assignments_container{
    color: black;
    max-width: 900px;
    margin: auto;
    padding-top: 20px;
}

.home{
    text-decoration: none;
    color: rgb(255, 255, 255);
    transition: 0.3s; 
}

#website{
    padding:0;
    width: 90%;
    max-width: 500px;
    
    background-image: url("/images/Website.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

